--- a/src/components/App.css
+++ b/src/components/App.css
@@ -34,3 +34,10 @@ a{
 a:visited{
     color:white;
 }
+.radiobuttons{
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+
+}
